--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "eslint": "^9",
